<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_salary"
        android:icon="@drawable/icon_salary"
        android:title="@string/salary" />

    <item
        android:id="@+id/menu_rewards"
        android:icon="@drawable/icon_rewards"
        android:title="@string/rewards" />
    <item
        android:id="@+id/menu_saving"
        android:icon="@drawable/icon_saving"
        android:title="@string/saving" />

    <item
        android:id="@+id/menu_gift"
        android:icon="@drawable/icon_gift"
        android:title="@string/gift" />

    <item
        android:id="@+id/menu_clothes"
        android:icon="@drawable/icon_clothes"
        android:title="@string/clothes" />

    <item
        android:id="@+id/menu_wedding_or_funeral"
        android:icon="@drawable/icon_flower"
        android:title="@string/wedding_or_funeral" />

    <item
        android:id="@+id/menu_healthy"
        android:icon="@drawable/icon_healthy"
        android:title="@string/healthy" />

    <item
        android:id="@+id/menu_travel"
        android:icon="@drawable/icon_travel"
        android:title="@string/travel" />

    <item
        android:id="@+id/menu_improve_myself"
        android:icon="@drawable/icon_myself"
        android:title="@string/improve_myself" />

    <item
        android:id="@+id/menu_bank"
        android:icon="@drawable/icon_bank"
        android:title="@string/bank" />

</menu>