<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addscreen.AddFragment">


    <Spinner
        android:id="@+id/addTittleSpinner"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/spinner_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTitleMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/amount_of_money"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addTittleSpinner" />

    <EditText
        android:id="@+id/edtAmountOfMoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="0"
        android:hint="@string/money"
        android:inputType="numberSigned|number"
        android:padding="10dp"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitleMoney" />

    <TextView
        android:id="@+id/txtContentMoneyType"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/imgNavigateChooseMoneyType"
        app:layout_constraintTop_toBottomOf="@id/edtAmountOfMoney" />


    <ImageView
        android:id="@+id/imgNavigateChooseMoneyType"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_baseline_navigate_next_24"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtAmountOfMoney" />


    <ImageView
        android:id="@+id/imgDateAddMoney"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        android:padding="10dp"
        android:src="@drawable/ic_baseline_date_range_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgNavigateChooseMoneyType" />

    <TextView

        android:id="@+id/txtDateAddMoney"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/imgDateAddMoney"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgNavigateChooseMoneyType" />

    <Button
        android:id="@+id/btnSaveMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@android:color/holo_blue_bright"
        android:padding="10dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:backgroundTint="@null"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDateAddMoney" />
</androidx.constraintlayout.widget.ConstraintLayout>